main.css
/* ... */
.featuredWork .textPreview p {
    margin: 0;
    text-align: justify;
}
.featuredWork .textPreview img {
    display: none;
}
.featuredWork .imgPreview img, .featuredIssue .preview img {
    max-height: 200%;
    min-height: 100%;
    max-width: 200%;
    min-width: 100%;
    transform: scale(1.2) translateY(-25%);
    transition: max-height 2s, min-height 2s, max-width 2s, min-width 2s, transform 2s;
}
.featuredWork:hover .imgPreview img, .featuredIssue:hover .preview {
    max-height: 100%;
    min-height: 0;
    max-width: 100%;
    min-width: 0;
    transform: scale(1.0);
}
.issueNav {
    list-style-type: none;
    text-align: center;
}
.issueNav img {
    height: 2em;
    margin: .5em 0;
}
#backToTopIssue {
    position: fixed;
    bottom: 5px;
    right: .5em;
    background-color: var(--secondaryBackground);
    border-radius: 10px;
    padding: 5px;
    margin-right: 1em;
}
#backToTopIssue:hover {
    background-color: var(--shadowColor);
    color: white !important;    
}

.piece {
    padding-top: var(--mainMargin);
}
.piece img {
    max-width: 100%;
    max-height: 100vh;
}
.share img {
    margin: 1em;
    height: 2em;
}

#addedTags li {
    display: inline;
    padding: .3em;
    border-radius: 1em;
    cursor: pointer;
    margin: .3em;
    background-color: white;
}
#addedTags li:hover {
    background-color: lightgray;
}
.required {
    color: var(--requiredColor);
}

.teamMember {
    display: grid;
    grid-template-columns: 20% 80%;
    grid-template-rows: repeat(3, auto);
}
.teamPic {
    --padding: 1em;
    width: calc(100% - var(--padding) * 2);
    grid-row: 1 / 4;
    padding: var(--padding);
}

summary {
    margin: 0.3em 0 0.8em 0;
    list-style: none;
}
details {
    margin-bottom: 1em;
}
details[open] {
    margin-bottom: 2em;
}
details h2 {
    display: inline;
}
summary::-webkit-details-marker, summary::marker {
    display: none;
}
details .chevron {
    display: inline;
    transition: transform .5s;
    cursor: pointer;
}
details[open] .chevron {
    transition: transform .5s;
    transform: rotateX(180deg);
}
details p {
    margin-left: 5em;
}
            
@media only screen and (max-width: 600px) {
    header {
        box-shadow: 0 var(--headerShadow) calc(var(--headerShadow) / 2) var(--shadowColor);
    }
    #headerTitle {
        justify-content: space-between;
    }
    #headerLogo {
        display: none;
    }
    nav {
        position: absolute;
    }

    /* https://www.w3schools.com/howto/howto_css_menu_icon.asp */
    #menuIcon {
        --barHeight: calc(var(--headerFontSize) / 7);
        cursor: pointer;
        display: inline;
        padding: 0 var(--headerIconPadding);
    }
    .bar1, .bar2, .bar3 {
        width: calc(var(--barHeight) * 5);
        height: var(--barHeight);
        transition: transform 0.4s, opacity 0.4s;
        background-color: var(--headerFontColor);
        margin: var(--barHeight) 0;
    }  
    /* Rotate first bar */
    #menuIcon.change .bar1 {
        transform: translate(0, calc(var(--barHeight) * 2)) rotate(-45deg);
    }  
    /* Fade out the second bar */
    #menuIcon.change .bar2 {opacity: 0;}  
    /* Rotate last bar */
    #menuIcon.change .bar3 {
        transform: translate(0, calc(var(--barHeight) * -2)) rotate(45deg);
    }
    nav ul {
        --navs: calc(var(--navs) - 1);
        display: none;
        animation: slideDown .4s;
    }
    nav ul li {
        padding: .2em;
    }
    nav.change ul {
        display: block;
        position: relative;
    }
    .change .dropdownInner, .dropdownOuter:hover .dropdownInner  {
        display: none;
    }

    #searchContainer {
        position: relative;
    }
    #searchContainer img {
        display: inline-block;
    }

    main {
        padding: 0;
    }
    .grid8020 {
        display: block;
    }

    #feed {
        height: auto;
        overflow-y: auto;
    }
    .feedImgPiece img {
        grid-row-end: span 1;
    }
    .feedImgPiece .feedItemContent {
        grid-column-end: span 2;
        margin-left: 1em;
    }
    #backToTop:hover {
        background-color: var(--tertiaryBackground);
        color: var(--bodyFontColor) !important;
    }

    #homeRight {
        margin-top: 0;
        box-shadow: 0 0 .3em var(--shadowColor);
    }
    #homeRight .logo {
        display: none;
    }
    #mailingListForm {
        position: static;
        padding: 0;
        max-width: 100%;
    }

    #submissionForm {
        margin-left: 0;
    }
    .submissionField input, .submissionField textarea, .submissionField select {
        max-width: 100%;
    }

    .issueNav {
        display: none;
    }
    .featuredWorks {
        display: block;
    }
    #backToTopIssue {
        background-color: var(--tertiaryBackground);
    }

    .teamMember {
        grid-template-columns: 50% 50%;
    }
    .teamPic {
        grid-row-end: 1;
    }
    .teamBio, .teamWorks {
        grid-column: 1 / 3;
    }
}

/* https://stackoverflow.com/questions/50840168/how-to-detect-if-the-os-is-in-dark-mode-in-browsers */
@media (prefers-color-scheme: dark) {
    :root {
        --shadowColor: #050d17;
        --headerBackground: #07101d;
        --headerFontColor: white;
        --navBackground: #091728;
        --bodyFontColor: white;
        --primaryBackground: #1d0d2c;
        --secondaryBackground: #60556b;
        --tertiaryBackground: #4a3d56;
        --requiredColor: pink;
    }
    .darkMode {
        filter: invert(1);
    }
}

